syntax = "proto3";
package voter.voter;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "voter/voter/params.proto";
import "voter/voter/poll.proto";
// this line is used by starport scaffolding # 1

option go_package = "voter/x/voter/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/voter/voter/params";
  }
  // Queries a list of Polls items.
	rpc Polls(QueryPollsRequest) returns (QueryPollsResponse) {
		option (google.api.http).get = "/voter/voter/polls";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryPollsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryPollsResponse {
  repeated Poll Poll = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
